--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,8 @@
     android:gravity="center"
     android:padding="12dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<!--    tools:context=".RegisterActivity">-->
+    android:layout_height="match_parent"
+    tools:context=".RegisterActivity">
 
     <ImageView
         android:layout_width="wrap_content"
