--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,9 +6,9 @@
     android:gravity="center"
     android:padding="12dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-<!--    tools:context=".RegisterActivity">-->
-    
+    android:layout_height="match_parent"
+    tools:context=".RegisterActivity">
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="50dp"
