--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="#ffffff"
-            android:textColor="#455cde"
+            android:textColor="#ffffff"
             android:text="Sign Up"
             android:textAllCaps="false" />
     </LinearLayout>
