--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -16,8 +16,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="20dp"
-            android:gravity="left|center_horizontal"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="@string/today"
             android:textStyle="bold"
             android:layout_marginTop="2dp"
@@ -31,7 +30,7 @@
                 android:layout_width="44dp"
                 android:layout_height="42.43dp"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/Avatar" />
+                android:text="Avatar" />
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -39,36 +38,67 @@
                 android:orientation="vertical">
                 <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="10dp"
+                    android:layout_height="60dp"
+
+                    android:layout_marginStart="10dp"
                     android:gravity="left|center"
-                    android:text="@string/notification"
+                    android:text="notification"
                     android:textSize="16sp" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:orientation="horizontal">
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="50dp"
-                        android:layout_gravity="left"
-                        android:src="@drawable/image1" />
+                        android:layout_gravity="left"/>
+                    <!--                        android:src="@drawable/image1" />-->
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="50dp"
-                        android:layout_gravity="left"
-                        android:src="@drawable/image2" />
+                        android:layout_gravity="left" />
+                    <!--                        android:src="@drawable/image2" />-->
                     <ImageView
                         android:layout_width="44dp"
                         android:layout_height="50dp"
-                        android:layout_gravity="left"
-                        android:src="@drawable/image4" />
+                        android:layout_gravity="left"/>
+                    <!--                        android:src="@drawable/image4" -->
+
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
+        <!-- 2nd feed -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:orientation="horizontal"
+            android:layout_margin="10dp">
+            <ImageView
+                android:layout_width="44dp"
+                android:layout_height="42.43dp"
+                android:layout_gravity="center"
+                android:text="Dupli" />
+            <LinearLayout
+                android:layout_width="350dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="290dp"
+                    android:layout_height="41dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_gravity="center_vertical"
+                    android:text="notification1"
+                    android:textSize="16sp" />
+                <ImageView
+                    android:layout_width="44dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="left|center_vertical"
+                    android:text="img" />
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </ScrollView>
