--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -100,23 +100,26 @@
             android:text="100 likes"
             android:textStyle="bold"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/author"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            android:text="Minh Pham"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/author"
+                android:layout_marginStart="10dp"
+                android:textStyle="bold"
+                android:text="Minh Pham"/>
 
-        <com.hendraanggrian.appcompat.socialview.widget.SocialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/description"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="toi dep trai qua'"
-            android:textColor="@color/colorAccent"/>
+            <com.hendraanggrian.appcompat.socialview.widget.SocialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/description"
+                android:layout_marginStart="5dp"
+                android:text="toi dep trai qua'"
+                android:layout_toEndOf="@+id/author"
+                android:textColor="@color/colorAccent"/>
+        </RelativeLayout>
 
         <TextView
             android:layout_width="wrap_content"
