--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -40,11 +40,44 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/recent"
+        android:layout_below="@id/bar">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recent"
+                android:id="@+id/recent1"
+                android:textStyle="bold"
+                android:layout_centerVertical="true"
+                android:textColor="@color/colorBlack"
+                android:layout_marginStart="10dp"
+                android:textSize="18sp">
+            </TextView>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="See all"
+                android:textColor="@color/colorPrimary"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                android:layout_alignParentEnd="true"
+                android:textSize="15sp">
+            </TextView>
+
+
+
+
+    </RelativeLayout>
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/bar">
+        android:layout_below="@id/recent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,6 +94,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:id="@+id/image_profile"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/avatar2">
 
                 </de.hdodenhof.circleimageview.CircleImageView>
@@ -100,16 +134,15 @@
 
                 </LinearLayout>
 
-                <Button
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:id="@+id/btn_follow"
-                    android:textColor="@color/colorWhite"
-                    android:text="Follow"
+                    android:id="@+id/close_btn"
+                    android:src="@drawable/ic_close"
+                    android:layout_marginEnd="10dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible">
-                </Button>
+                    android:layout_centerVertical="true">
+                </ImageView>
 
 
 
@@ -126,6 +159,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:id="@+id/image_profile1"
+                    android:layout_marginStart="10dp"
                     android:src="@drawable/avatar3">
 
                 </de.hdodenhof.circleimageview.CircleImageView>
@@ -165,16 +199,15 @@
 
                 </LinearLayout>
 
-                <Button
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
-                    android:id="@+id/btn_follow1"
-                    android:textColor="@color/colorWhite"
-                    android:text="Follow"
+                    android:id="@+id/close_btn2"
+                    android:src="@drawable/ic_close"
+                    android:layout_marginEnd="10dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:visibility="visible">
-                </Button>
+                    android:layout_centerVertical="true">
+                </ImageView>
 
             </RelativeLayout>
 
