--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -218,7 +218,8 @@
                     android:layout_width="135dp"
                     android:layout_height="135dp"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/post1"/>
+                    android:src="@drawable/post1"
+                    android:id="@+id/post_view"/>
 
             </LinearLayout>
 
