--- a/app/src/main/res/layout/activity_following.xml
+++ b/app/src/main/res/layout/activity_following.xml
@@ -30,7 +30,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Followers"
+                android:text="Following"
                 android:textStyle="bold"
                 android:textSize="22sp"
                 android:gravity="center"
@@ -108,9 +108,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:id="@+id/btn_follow"
-                    android:text="Following"
-                    android:backgroundTint="#D3D3D3"
-                    android:textColor="#262626"
+                    android:text="Unfollow"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_marginEnd="20dp">
@@ -175,11 +173,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="40dp"
                     android:id="@+id/btn_follow1"
-                    android:text="Following"
+                    android:text="Unfollow"
                     android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
-                    android:backgroundTint="#D3D3D3"
-                    android:textColor="#262626"
                     android:visibility="visible"
                     android:layout_marginEnd="20dp">
                 </Button>
